Fix formatting and clear cache

--- a/404.html
+++ b/404.html
@@ -21,6 +21,6 @@ exclude: yes
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Página no encontrada :(</strong></p>
+  <p>No encontramos la página que estás buscando.</p>
 </div>
