--- a/Old site/404.html
+++ b/Old site/404.html
@@ -1,5 +1,7 @@
 ---
+permalink: /404.html
 layout: default
+exclude: yes
 ---
 
 <style type="text/css" media="screen">
@@ -19,6 +21,6 @@ layout: default
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Página no encontrada :(</strong></p>
+  <p>No encontramos la página que estás buscando.</p>
 </div>
